docs: add local dev setup with Docker, backend, frontend, and login instructions