@@ -19,66 +19,131 @@ SentinelTrade is built on **Hexagonal Architecture** (Ports & Adapters) with dom
 
 ---
 
-## Getting Started
+## Running Locally
+
+The system has two services: a **Spring Boot backend** (port `8080`) and a **Vite + React frontend** (port `5173`). Both must be running — the frontend proxies all `/api` calls to the backend.
 
 ### Prerequisites
 
-| Requirement | Version |
+| Requirement | Version | Notes |
+|---|---|---|
+| Java (JDK) | 25+ | Required to build and run the backend |
+| Maven | 3.9+ | Or use the included `./mvnw` wrapper |
+| Docker | any | Easiest way to run PostgreSQL |
+| Node.js | 18+ | Required for the frontend |
+
+---
+
+### Step 1 — Start PostgreSQL
+
+The quickest path is Docker. This creates a `sentineldb` database with the credentials the app expects by default:
+
+```bash
+docker run -d \
+  --name sentinel-pg \
+  -e POSTGRES_DB=sentineldb \
+  -e POSTGRES_USER=sentinel \
+  -e POSTGRES_PASSWORD=sentinel \
+  -p 5432:5432 \
+  postgres:16
+```
+
+Verify it is up:
+
+```bash
+docker ps | grep sentinel-pg
+```
+
+> **Without Docker:** create the database manually and export `DB_USERNAME`, `DB_PASSWORD` to match your setup.
+
+---
+
+### Step 2 — Start the Backend
+
+```bash
+cd sentinel-trade
+
+# Generate Maven wrapper if not present
+mvn wrapper:wrapper   # one-time, skip if ./mvnw already exists
+
+# Run
+JWT_SECRET=sentinel-dev-secret-min-32-characters-xx ./mvnw spring-boot:run
+```
+
+Verify:
+
+```bash
+curl http://localhost:8080/actuator/health
+# {"status":"UP"}
+```
+
+Flyway runs automatically on startup and applies `V1__create_trades_schema.sql`.
+
+---
+
+### Step 3 — Start the Frontend
+
+Open a **new terminal tab**:
+
+```bash
+cd sentinel-trade/frontend
+npm install        # first time only
+npm run dev
+```
+
+Open **http://localhost:5173** in your browser.
+
+---
+
+### Step 4 — Log In
+
+The auth endpoint issues a JWT for **any non-blank accountId and password** — no user database is required for local development:
+
+| Field | Value |
 |---|---|
-| Java (JDK) | 25+ |
-| PostgreSQL | 18.3+ |
-| Maven | 3.9+ |
+| Account ID | Any string, e.g. `ACC001` or `trader1` |
+| Password | Any non-blank string, e.g. `password` |
 
-### Steps
+After logging in you will land on the Dashboard. Use **Submit Trade** to create trades and **Trade Lookup** to find them by UUID.
 
-1. **Clone the repository**
-
-   ```bash
-   git clone https://github.com/your-org/sentinel-trade.git
-   cd sentinel-trade
-   ```
-
-2. **Set environment variables**
-
-   ```bash
-   export JWT_SECRET="your-256-bit-secret"
-   export DB_URL="jdbc:postgresql://localhost:5432/sentinel_trade"
-   export DB_USER="sentinel"
-   export DB_PASSWORD="your-db-password"
-   ```
-
-3. **Create the database**
-
-   ```bash
-   psql -U postgres -c "CREATE DATABASE sentinel_trade;"
-   psql -U postgres -c "CREATE USER sentinel WITH PASSWORD 'your-db-password';"
-   psql -U postgres -c "GRANT ALL PRIVILEGES ON DATABASE sentinel_trade TO sentinel;"
-   ```
-
-4. **Build and run**
-
-   ```bash
-   mvn clean package -DskipTests
-   java -jar target/sentinel-trade-*.jar
-   ```
-
-5. **Verify**
-
-   ```bash
-   curl http://localhost:8080/actuator/health
-   # {"status":"UP"}
-   ```
+---
 
 ### Environment Variables
 
-| Variable | Required | Description |
+| Variable | Default | Description |
 |---|---|---|
-| `JWT_SECRET` | Yes | HMAC-SHA256 signing key — minimum 256 bits (32 bytes) |
-| `DB_URL` | Yes | JDBC connection URL to PostgreSQL 18.3 instance |
-| `DB_USER` | Yes | PostgreSQL username with read/write access to the schema |
-| `DB_PASSWORD` | Yes | Password for the PostgreSQL user |
-| `SERVER_PORT` | No | HTTP port (default: `8080`) |
-| `LOG_LEVEL` | No | Root log level (default: `INFO`) |
+| `JWT_SECRET` | *(required)* | HMAC-SHA256 signing key — minimum 32 characters |
+| `DB_USERNAME` | `sentinel` | PostgreSQL username |
+| `DB_PASSWORD` | `sentinel` | PostgreSQL password |
+| `SERVER_PORT` | `8080` | Backend HTTP port |
+
+---
+
+## API Reference
+
+### Auth
+
+```
+POST /api/v1/auth/token
+Content-Type: application/json
+
+{ "accountId": "ACC001", "password": "password" }
+```
+
+Response:
+
+```json
+{ "token": "<jwt>", "expiresIn": 3600000 }
+```
+
+### Trades
+
+All trade endpoints require `Authorization: Bearer <token>`.
+
+```
+POST /api/v1/trades
+GET  /api/v1/trades/{id}
+```
 
 ---
 
@@ -98,4 +163,4 @@ Every operation that can fail returns `Result<SuccessType, FailureType>` rather 
 
 ### Virtual Threads
 
-SentinelTrade runs on Java 25 virtual threads (`--enable-preview` not required in JDK 25). The Spring Boot 4 embedded server is configured to use a virtual-thread executor, allowing the application to handle tens of thousands of concurrent in-flight requests without the memory overhead of a native thread pool.
+SentinelTrade runs on Java 25 virtual threads. The Spring Boot 4 embedded server is configured to use a virtual-thread executor, allowing the application to handle tens of thousands of concurrent in-flight requests without the memory overhead of a native thread pool.
